--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,3 +26,9 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: Publish NuGet
+      uses: brandedoutcast/publish-nuget@v2.5.2
+      with:
+        PROJECT_FILE_PATH: "NullSafeCollection/NullSafeCollection.csproj"
+        NUGET_KEY: ${{secrets.NUGET_KEY}}
+      if: github.event_name != 'pull_request'
