--- a/NullSafeCollections/NullSafeCollections.csproj
+++ b/NullSafeCollections/NullSafeCollections.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <Version>1.0.0</Version>
+    <Description>Iterate over C# collections without having to check for whether they are null</Description>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
